--- a/docs/_posts/2016-11-26-saber.markdown
+++ b/docs/_posts/2016-11-26-saber.markdown
@@ -34,7 +34,9 @@ The accelerometer is hooked up to Bela as shown in this circuit diagram and shou
 
 ## Sound Design
 
-The sound engine that we created in Pure Data consists of two main parts, the shooshing sound that is created when you swing the saber about, and the electric crashing sound that is triggered when the saber impacts with something. The basis of the swooshing sound is a sample of tv hum that is looped inside the patch and passed into multiple delay lines that have a variable amount of delay. When we move the saber, which is detected by the accelerometer, we change the length of the delay. This creates an effect that is very similar to the doppler effect, a perceptual effect that happens with moving sound sources. For the impact and unsheathing sound we used a noise source with a flanger effect applied that was trigger by the piezo input. This is one of the examples that comes with Bela as an example and if you want to try building your own saber or just want to dig through the code you can find it here: [examples/10-Instruments/saber](https://github.com/BelaPlatform/Bela/tree/master/examples/10-Instruments). Have a look at the video below to see and hear the saber in action and to get more information.
+The sound engine that we created in Pure Data consists of two main parts, the shooshing sound that is created when you swing the saber about, and the electric crashing sound that is triggered when the saber impacts with something. The basis of the swooshing sound is a sample of tv hum that is looped inside the patch and passed into multiple delay lines that have a variable amount of delay. When we move the saber, which is detected by the accelerometer, we change the length of the delay. This creates an effect that is very similar to the doppler effect, a perceptual effect that happens with moving sound sources. 
+
+For the impact and unsheathing sound we used a noise source with a flanger effect applied that was trigger by the piezo input. This is one of the examples that comes with Bela as an example and if you want to try building your own saber or just want to dig through the code you can find it here: [examples/10-Instruments/saber](https://github.com/BelaPlatform/Bela/tree/master/examples/10-Instruments). Have a look at the video below to see and hear the saber in action and to get more information.
 
 {% include youtube.html youtube="ivjHWiHN1UM" %}
 
