Added aural fabrics post. Changed hacking category to projects.

--- a/docs/_posts/2016-11-26-saber.markdown
+++ b/docs/_posts/2016-11-26-saber.markdown
@@ -5,6 +5,7 @@ date: 2016-12-01
 categories:
   - "Hardware"
   - "Sound Design"
+  - "Projects"
 description: "DIY Audio Lightsaber made with Bela"
 image: saber.jpg
 author: robert
