--- a/docs/_posts/2016-11-28-dbox.markdown
+++ b/docs/_posts/2016-11-28-dbox.markdown
@@ -6,7 +6,7 @@ categories:
   - Instruments
   - Hardware
   - Synths
-  - Hacking
+  - Projects
 description: "Hackable Musical Instruments"
 image: hacking.jpg
 author: andrew
