--- a/docs/_posts/2016-11-28-steim.markdown
+++ b/docs/_posts/2016-11-28-steim.markdown
@@ -5,7 +5,7 @@ date: 2016-12-15
 categories:
   - Workshops
 description: "STEIM Bela Workshop 2016"
-image: steim-7.jpg
+image: STEIM/steim-7.jpg
 author: andrew
 ---
 
@@ -13,13 +13,13 @@ In August 2016, we organised a three-day workshop in collaboration with [STEIM](
 
 The idea for the workshop came from a discussion at the [Musical Organics](http://www.sonicwriting.org/steim.html) Symposium organised by [Thor Magnusson](http://www.ixi-audio.net/thor/) at STEIM in May 2016. The purpose of the workshop was for digital musical instrument (DMI) creators to port existing instrument designs to Bela. Eight experienced DMI creators participated, with two members of the Bela team (Andrew and Giulio) acting as technical facilitators and two other researchers (Fabio Morreale of the C4DM [Augmented Instruments Lab](http://www.eecs.qmul.ac.uk/~andrewm), QMUL and Alan Chamberlain of the [Mixed Reality Laboratory](https://www.nottingham.ac.uk/research/groups/mixedrealitylab/), University of Nottingham) collected documentary evidence for a CHI 2017 paper.
 
-{% include single-image.html fileName="steim-1.jpg" caption="Andrew and Giulio help STEIM workshop participants get started with Bela." %}
+{% include single-image.html fileName="STEIM/steim-1.jpg" caption="Andrew and Giulio help STEIM workshop participants get started with Bela." %}
 
 The workshop started with participants presenting their instrument (pre-Bela) to the group, including a description and in some cases a short demo performance. The facilitators then introduced Bela and supplied each participant with a Bela kit. After a hands-on Bela tutorial, the activity for the remainder of the time shifted to instrument-making. At the end of the last day, participants were invited to give a final demonstration of their newly-ported instrument. 
 
 The participants in the workshop were [Marije Baalman](https://www.marijebaalman.eu/), [Till Bovermann](http://tai-studio.org/), [Tijs Ham](http://tapage-sound.com/), [Mark Ijzerman](http://markijzerman.com/), [Tom Mudd](http://www.tommudd.co.uk/), [Jonathan Reus](http://jonathanreus.com/), [Fedde ten Berge](http://www.feddetenberge.nl/) and [Dianne Verdonk](https://dianneverdonk.wordpress.com/).
 
-{% include single-image.html fileName="steim-2.jpg" caption="Mark IJzerman and Dianne Verdonk assemble hardware for their instruments." %}
+{% include single-image.html fileName="STEIM/steim-2.jpg" caption="Mark IJzerman and Dianne Verdonk assemble hardware for their instruments." %}
 
 5 of the 8 instruments used SuperCollider on Bela, support for which was added by Marije Baalman and Dan Stowell with help from Till Bovermann and Giulio Moro. 2 of the 8 instruments used Pd and 1 used C++. Over the course of three days, participants worked with each other and with the facilitators to get their instruments up and running. Marije and Till also worked on supporting and documenting various capabilities of SuperCollider on Bela, including tutorials on using [rotary encoders](http://tai-studio.org/2016/08/12/bela-rotary.html) and [serial communication](http://tai-studio.org/2016/08/12/bela-capsense.html).
 
@@ -29,10 +29,10 @@ A paper on the workshop and its relationship to the growing Bela community will 
 
 Below are some photos from the workshop. More info on the instruments and their continuing use will be featured on this blog as time goes on!
 
-{% include single-image.html fileName="steim-3.jpg" caption="Testing a Bela setup using sensors, MIDI input and the speaker amplifiers on the Bela cape." %}
+{% include single-image.html fileName="STEIM/steim-3.jpg" caption="Testing a Bela setup using sensors, MIDI input and the speaker amplifiers on the Bela cape." %}
 
-{% include single-image.html fileName="steim-6.jpg" caption="La Diantenne, a pitched percussion instrument by Dianne Verdonk, was ported to Bela during the workshop." %}
+{% include single-image.html fileName="STEIM/steim-6.jpg" caption="La Diantenne, a pitched percussion instrument by Dianne Verdonk, was ported to Bela during the workshop." %}
 
-{% include single-image.html fileName="steim-4.jpg" caption="The Scrempler, a SuperCollider-based live sampling instrument by Marije Baalman, was ported to Bela during the workshop." %}
+{% include single-image.html fileName="STEIM/steim-4.jpg" caption="The Scrempler, a SuperCollider-based live sampling instrument by Marije Baalman, was ported to Bela during the workshop." %}
 
-{% include single-image.html fileName="steim-5.jpg" caption="Wearable instrument tech using Bela by Jonathan Reus." %}
+{% include single-image.html fileName="STEIM/steim-5.jpg" caption="Wearable instrument tech using Bela by Jonathan Reus." %}
